<resources>
    <string name="app_name">EasyMessages</string>

    <!-- Strings related to login -->
    <string name="prompt_Username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_address">Ip Address / Domain</string>
    <string name="prompt_port">Port</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="btnSend">Send</string>
    <string name="hintMgsLine">Write a message ...</string>
    <string name="btnOnline">Who is online</string>
    <string name="lblUsername">As:</string>
    <string name="imageButton">whut?</string>

    <string name="general">General</string>
    <string name="plus">+</string>

    <string name="chat5">chat5</string>
    <string name="chat4">chat4</string>
    <string name="chat3">chat3</string>
    <string name="chat2">chat2</string>
    <string name="chat1">chat1</string>
    <string name="address">Prixesoft.com</string>
    <string name="port">10514</string>
</resources>
