<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/linearLayout"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.prixes.easymessages.Messaging"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout"
        android:layout_marginBottom="6dp"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lblUsername"
            android:id="@+id/lblUsername"
            android:layout_weight="0.72"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/btnOnline"
            android:id="@+id/btnOnline" />
    </LinearLayout>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center_horizontal"
>


        <ScrollView
                android:id="@+id/scroll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:windowSoftInputMode="adjustResize"
                android:scrollbars="vertical"
                android:fillViewport="true"
            android:layout_marginBottom="25dp">


                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:windowSoftInputMode="adjustResize"
                    android:layout_gravity="bottom"
                    android:scrollbars="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/txtChatLog"
                        android:singleLine="false"
                        android:maxLines = "100"
                        android:scrollbars = "vertical"
                        android:textSize="18sp"
                        android:layout_gravity="bottom"
                        android:scrollHorizontally="false"
                        android:gravity="bottom"
                        android:layout_alignParentBottom="true"
                        android:textColor="#2e2e2e"
                        android:lineSpacingExtra="5dp"/>
                </RelativeLayout>
            </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/msgLine"
                android:hint="@string/hintMgsLine"
                android:layout_weight="1.03"
                android:textSize="16sp"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btnSend"
                android:id="@+id/btnSend"
                android:layout_gravity="right"
                android:longClickable="false"
                android:src="@drawable/card"
                android:contentDescription="@string/imageButton"
                android:background="@null"/>


        </LinearLayout>


    </RelativeLayout>
    </LinearLayout>